# CastXML-python-distributions

./: .coveragerc  README.md  pyproject.toml  requirements-dev.txt
castxml/: __init__.py
scripts/: binary_hashes.json  hatch_build.py  update_castxml_version.py
