[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
 
[tool.hatch.build.targets.sdist]
exclude = []
 
[project]
name='castxml'
version='0.4.5'
cmake_install_dir='castxml/data'
author='Kitware Inc'
 
include = [
  "/src/data/*.csv",
]
 
[tool.hatch.build.targets.wheel]
packages = ["castxml"]