[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
 
[tool.hatch.build.targets.sdist]
exclude = []
 
[project]
name='castxml'
author='Kitware Inc'
description='CastXML is a C-family abstract syntax tree XML output tool'
readme='README.md'
license = {file = "LICENSE"}
home-page='https://github.com/CastXML/CastXML-python-distributions'

dynamic = ["version"]
 
include = [
  "/src/data/*.csv",
]
 
[tool.hatch.build.targets.wheel]
packages = ["castxml"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "scripts/hatch_build.py"
dependencies = [
  "pooch"
]

[tool.hatch.version]
path = "castxml/__about__.py"